--- a/fyp_01.ipynb
+++ b/fyp_01.ipynb
@@ -16,8 +16,30 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Datasets:\n",
+        "\n",
+        "*   https://www.kaggle.com/code/ma00753045/tryon/notebook\n",
+        "*   https://www.kaggle.com/datasets/rkuo2000/viton-dataset\n",
+        "\n",
+        "Papers:\n",
+        "\n",
+        "*   https://www.arxiv-vanity.com/papers/1909.02165/\n",
+        "*   https://www.kdnuggets.com/2020/10/deep-learning-virtual-try-clothes.html\n",
+        "\n",
+        "Live Implementation Tutorials:\n",
+        "\n",
+        "* https://www.youtube.com/watch?v=csYkGeJ5bCM&list=WL&index=7&ab_channel=BrainMentorsPvtLtd\n",
+        "* https://www.youtube.com/watch?v=YjWh7QvVH60&ab_channel=TheAIGuy\n"
+      ],
+      "metadata": {
+        "id": "H_P8FlVKYvh0"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "id": "4ZKpbZtpwI0A"
       },
@@ -35,12 +57,12 @@
     {
       "cell_type": "code",
       "source": [
-        "is_run_first_time = True"
+        "is_run_first_time = False"
       ],
       "metadata": {
         "id": "AvXcD8g8zVtH"
       },
-      "execution_count": 2,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -61,31 +83,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5gDGXbJgxCk8",
-        "outputId": "c3b6b177-6859-465f-bb23-c549959e6865"
+        "outputId": "87c9ca41-3d93-4465-b6d4-b75dbcf0d9c5"
       },
-      "execution_count": 3,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-10-28 06:46:59--  https://drive.google.com/file/d/1lHNujZIq6KVeGOOdwnOXVCSR5E7Kv6xv/view\n",
-            "Resolving drive.google.com (drive.google.com)... 172.253.114.101, 172.253.114.139, 172.253.114.138, ...\n",
-            "Connecting to drive.google.com (drive.google.com)|172.253.114.101|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: unspecified [text/html]\n",
-            "Saving to: ‘view’\n",
-            "\n",
-            "view                    [ <=>                ]  72.40K  --.-KB/s    in 0.004s  \n",
-            "\n",
-            "2022-10-28 06:46:59 (20.0 MB/s) - ‘view’ saved [74139]\n",
-            "\n",
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1lHNujZIq6KVeGOOdwnOXVCSR5E7Kv6xv\n",
-            "To: /content/ACGPN_traindata.zip\n",
-            "100% 511M/511M [00:04<00:00, 105MB/s]\n",
-            "CPU times: user 285 ms, sys: 64.7 ms, total: 350 ms\n",
-            "Wall time: 29 s\n"
+            "CPU times: user 4 µs, sys: 0 ns, total: 4 µs\n",
+            "Wall time: 9.06 µs\n"
           ]
         }
       ]
@@ -108,31 +115,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g6xkXbUnxDxX",
-        "outputId": "c34aa6e4-2c44-4240-9a7b-01fe0585b6c3"
+        "outputId": "eb057fd1-7f45-45b7-e300-8822938e9240"
       },
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-10-28 06:47:28--  https://drive.google.com/file/d/1tE7hcVFm8Td8kRh5iYRBSDFdvZIkbUIR/view\n",
-            "Resolving drive.google.com (drive.google.com)... 172.253.114.101, 172.253.114.139, 172.253.114.138, ...\n",
-            "Connecting to drive.google.com (drive.google.com)|172.253.114.101|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: unspecified [text/html]\n",
-            "Saving to: ‘view.1’\n",
-            "\n",
-            "view.1                  [ <=>                ]  72.41K  --.-KB/s    in 0.003s  \n",
-            "\n",
-            "2022-10-28 06:47:28 (24.6 MB/s) - ‘view.1’ saved [74146]\n",
-            "\n",
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1tE7hcVFm8Td8kRh5iYRBSDFdvZIkbUIR\n",
-            "To: /content/Data_preprocessing.zip\n",
-            "100% 143M/143M [00:00<00:00, 149MB/s]\n",
-            "CPU times: user 91.6 ms, sys: 29 ms, total: 121 ms\n",
-            "Wall time: 6.92 s\n"
+            "CPU times: user 6 µs, sys: 0 ns, total: 6 µs\n",
+            "Wall time: 10 µs\n"
           ]
         }
       ]
@@ -146,7 +138,7 @@
       "metadata": {
         "id": "kbG03Mp24528"
       },
-      "execution_count": 5,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -163,12 +155,14 @@
         "  for dir_path, dirs, files in os.walk(root_dir):\n",
         "    dir_n_files = dir_n_files.append({'Directoy Path':dir_path, 'Sub Directories':dirs, 'Number of Files':len(files)}, ignore_index=True)\n",
         "\n",
+        "  dir_n_files['Number of Files'] = dir_n_files['Number of Files'].astype(int)\n",
+        "\n",
         "  return dir_n_files"
       ],
       "metadata": {
         "id": "q_Q88F8bGRN7"
       },
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -184,9 +178,9 @@
           "height": 300
         },
         "id": "4lKrOjmmIx0J",
-        "outputId": "494273af-4ebe-48bb-89ea-beec5bff3608"
+        "outputId": "40c4104d-784d-40e9-d23a-425486895afc"
       },
-      "execution_count": 7,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,18 +197,18 @@
               "7       /content/Test_Dir/test_pose   \n",
               "\n",
               "                                     Sub Directories  Number of Files  \n",
-              "0  [test_label, test_img, test_colormask, test_ed...              0.0  \n",
-              "1                                                 []           2032.0  \n",
-              "2                                                 []           2032.0  \n",
-              "3                                                 []          10000.0  \n",
-              "4                                                 []           2032.0  \n",
-              "5                                                 []           2032.0  \n",
-              "6                                                 []          12000.0  \n",
-              "7                                                 []           2032.0  "
+              "0  [test_label, test_img, test_colormask, test_ed...                0  \n",
+              "1                                                 []             2032  \n",
+              "2                                                 []             2032  \n",
+              "3                                                 []            10000  \n",
+              "4                                                 []             2032  \n",
+              "5                                                 []             2032  \n",
+              "6                                                 []            12000  \n",
+              "7                                                 []             2032  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a82be4bb-281a-4e4a-abb2-6977bef850b8\">\n",
+              "  <div id=\"df-ce7c799e-27fb-4888-8cda-048268e99f01\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -244,54 +238,54 @@
               "      <th>0</th>\n",
               "      <td>/content/Test_Dir</td>\n",
               "      <td>[test_label, test_img, test_colormask, test_ed...</td>\n",
-              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>/content/Test_Dir/test_label</td>\n",
               "      <td>[]</td>\n",
-              "      <td>2032.0</td>\n",
+              "      <td>2032</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>/content/Test_Dir/test_img</td>\n",
               "      <td>[]</td>\n",
-              "      <td>2032.0</td>\n",
+              "      <td>2032</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>/content/Test_Dir/test_colormask</td>\n",
               "      <td>[]</td>\n",
-              "      <td>10000.0</td>\n",
+              "      <td>10000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>/content/Test_Dir/test_edge</td>\n",
               "      <td>[]</td>\n",
-              "      <td>2032.0</td>\n",
+              "      <td>2032</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>/content/Test_Dir/test_color</td>\n",
               "      <td>[]</td>\n",
-              "      <td>2032.0</td>\n",
+              "      <td>2032</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>/content/Test_Dir/test_mask</td>\n",
               "      <td>[]</td>\n",
-              "      <td>12000.0</td>\n",
+              "      <td>12000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>/content/Test_Dir/test_pose</td>\n",
               "      <td>[]</td>\n",
-              "      <td>2032.0</td>\n",
+              "      <td>2032</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a82be4bb-281a-4e4a-abb2-6977bef850b8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce7c799e-27fb-4888-8cda-048268e99f01')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -342,12 +336,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a82be4bb-281a-4e4a-abb2-6977bef850b8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ce7c799e-27fb-4888-8cda-048268e99f01 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a82be4bb-281a-4e4a-abb2-6977bef850b8');\n",
+              "          const element = document.querySelector('#df-ce7c799e-27fb-4888-8cda-048268e99f01');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -370,7 +364,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 23
         }
       ]
     },
@@ -387,9 +381,9 @@
           "height": 300
         },
         "id": "sQo3FFxqLmVm",
-        "outputId": "a51e361f-438b-42b8-b3b3-e394491db5aa"
+        "outputId": "d56b99de-bd33-4e03-820d-d3190005a698"
       },
-      "execution_count": 8,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,18 +400,18 @@
               "7       /content/Train_Dir/train_pose   \n",
               "\n",
               "                                     Sub Directories  Number of Files  \n",
-              "0  [train_label, train_colormask, train_color, tr...              0.0  \n",
-              "1                                                 []          14221.0  \n",
-              "2                                                 []          50000.0  \n",
-              "3                                                 []          14221.0  \n",
-              "4                                                 []          14221.0  \n",
-              "5                                                 []          12000.0  \n",
-              "6                                                 []          14221.0  \n",
-              "7                                                 []          14221.0  "
+              "0  [train_label, train_colormask, train_color, tr...                0  \n",
+              "1                                                 []            14221  \n",
+              "2                                                 []            50000  \n",
+              "3                                                 []            14221  \n",
+              "4                                                 []            14221  \n",
+              "5                                                 []            12000  \n",
+              "6                                                 []            14221  \n",
+              "7                                                 []            14221  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-61fcf0e1-0294-44cc-9e2c-4a2be0b962d8\">\n",
+              "  <div id=\"df-443a78c7-2d53-4810-8d6f-928df77a8c6a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -447,54 +441,54 @@
               "      <th>0</th>\n",
               "      <td>/content/Train_Dir</td>\n",
               "      <td>[train_label, train_colormask, train_color, tr...</td>\n",
-              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>/content/Train_Dir/train_label</td>\n",
               "      <td>[]</td>\n",
-              "      <td>14221.0</td>\n",
+              "      <td>14221</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>/content/Train_Dir/train_colormask</td>\n",
               "      <td>[]</td>\n",
-              "      <td>50000.0</td>\n",
+              "      <td>50000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>/content/Train_Dir/train_color</td>\n",
               "      <td>[]</td>\n",
-              "      <td>14221.0</td>\n",
+              "      <td>14221</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>/content/Train_Dir/train_edge</td>\n",
               "      <td>[]</td>\n",
-              "      <td>14221.0</td>\n",
+              "      <td>14221</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>/content/Train_Dir/train_mask</td>\n",
               "      <td>[]</td>\n",
-              "      <td>12000.0</td>\n",
+              "      <td>12000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>/content/Train_Dir/train_img</td>\n",
               "      <td>[]</td>\n",
-              "      <td>14221.0</td>\n",
+              "      <td>14221</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>/content/Train_Dir/train_pose</td>\n",
               "      <td>[]</td>\n",
-              "      <td>14221.0</td>\n",
+              "      <td>14221</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-61fcf0e1-0294-44cc-9e2c-4a2be0b962d8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-443a78c7-2d53-4810-8d6f-928df77a8c6a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -545,12 +539,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-61fcf0e1-0294-44cc-9e2c-4a2be0b962d8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-443a78c7-2d53-4810-8d6f-928df77a8c6a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-61fcf0e1-0294-44cc-9e2c-4a2be0b962d8');\n",
+              "          const element = document.querySelector('#df-443a78c7-2d53-4810-8d6f-928df77a8c6a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -573,7 +567,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 24
         }
       ]
     },
@@ -590,9 +584,9 @@
           "height": 269
         },
         "id": "yjfObF2N5ehN",
-        "outputId": "e850377e-1b52-4735-bc85-ec86903fcc7c"
+        "outputId": "f429240f-4949-49a1-d9fe-db0d543b8824"
       },
-      "execution_count": 9,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -614,7 +608,7 @@
       "metadata": {
         "id": "NocxZUOM66Jz"
       },
-      "execution_count": 9,
+      "execution_count": 25,
       "outputs": []
     }
   ]
