training and pred part added

--- a/fyp_04_merge_classes_junaid.ipynb
+++ b/fyp_04_merge_classes_junaid.ipynb
@@ -127,6 +127,7 @@
       "source": [
         "is_download_cihp_dataset = False\n",
         "\n",
+        "# model with reduced classes and transfer learning\n",
         "run_model_parsing_3 = False"
       ],
       "metadata": {
@@ -822,9 +823,260 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from tensorflow.keras.layers import Conv2D, BatchNormalization, Activation, MaxPool2D, Conv2DTranspose, Concatenate, Input\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.applications import EfficientNetB0\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "def conv_block(inputs, num_filters):\n",
+        "    x = Conv2D(num_filters, 3, padding=\"same\")(inputs)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Activation(\"relu\")(x)\n",
+        "\n",
+        "    x = Conv2D(num_filters, 3, padding=\"same\")(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Activation(\"relu\")(x)\n",
+        "\n",
+        "    return x\n",
+        "\n",
+        "def decoder_block(inputs, skip, num_filters):\n",
+        "    x = Conv2DTranspose(num_filters, (2, 2), strides=2, padding=\"same\")(inputs)\n",
+        "    x = Concatenate()([x, skip])\n",
+        "    x = conv_block(x, num_filters)\n",
+        "    return x\n",
+        "\n",
+        "def build_effienet_unet(input_shape, n_classes = 20):\n",
+        "    \"\"\" Input \"\"\"\n",
+        "    inputs = Input(input_shape)\n",
+        "\n",
+        "    \"\"\" Pre-trained Encoder \"\"\"\n",
+        "    encoder = EfficientNetB0(include_top=False, weights=\"imagenet\", input_tensor=inputs)\n",
+        "\n",
+        "    for layer in encoder.layers:\n",
+        "      print(layer.name)\n",
+        "      break \n",
+        "\n",
+        "    s1 = encoder.get_layer(\"input_22\").output                      ## 256\n",
+        "    s2 = encoder.get_layer(\"block2a_expand_activation\").output    ## 128\n",
+        "    s3 = encoder.get_layer(\"block3a_expand_activation\").output    ## 64\n",
+        "    s4 = encoder.get_layer(\"block4a_expand_activation\").output    ## 32\n",
+        "\n",
+        "    \"\"\" Bottleneck \"\"\"\n",
+        "    b1 = encoder.get_layer(\"block6a_expand_activation\").output    ## 16\n",
+        "\n",
+        "    \"\"\" Decoder \"\"\"\n",
+        "    d1 = decoder_block(b1, s4, 512)                               ## 32\n",
+        "    d2 = decoder_block(d1, s3, 256)                               ## 64\n",
+        "    d3 = decoder_block(d2, s2, 128)                               ## 128\n",
+        "    d4 = decoder_block(d3, s1, 64)                                ## 256\n",
+        "\n",
+        "    \"\"\" Output \"\"\"\n",
+        "\n",
+        "    output_layer = Conv2D(filters = n_classes, kernel_size = 1, padding='same')(d4)\n",
+        "    outputs = Activation('softmax', dtype=tf.float32)(output_layer)\n",
+        "\n",
+        "    model = Model(inputs, outputs, name=\"EfficientNetB0_UNET\")\n",
+        "    return model"
+      ],
+      "metadata": {
+        "id": "0AT-8M9j4OIL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "IMG_HEIGHT, IMG_WIDTH, N_CHANNELS, N_CLASSES, BATCH_SIZE_PARSING"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hp_UtmPv5LFj",
+        "outputId": "f69c7ebd-8e51-4e88-9723-3b8bb0ff4ce1"
+      },
+      "execution_count": 389,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(320, 416, 3, 8, 32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 389
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "INITIAL_LR = 1e-3\n",
+        "MIN_LR = 1e-6\n",
+        "LR_REDUCTION_FACTOR = 0.1\n",
+        "LR_REUCTION_PATIENCE = 2\n",
+        "\n",
+        "EARLY_STOPPING_PATIENCE = 2\n",
+        "\n",
+        "EPOCHS = 1\n",
+        "VERBOSE = 2\n",
+        "\n",
+        "# These file names refer to names by which model weights files will be saved or loaded: model_parsing_[model_number]_[saved_file_number]\n",
+        "WEIGHT_FILE_NAME = 'model_parsing_3_0.h5'\n",
+        "MODEL_FILE_NAME = 'model_parsing_3_1.h5'\n",
+        "\n",
+        "model_parsing_3 = build_effienet_unet(input_shape=(IMG_HEIGHT, IMG_WIDTH, N_CHANNELS), n_classes=N_CLASSES)\n",
+        "\n",
+        "if run_model_parsing_3:\n",
+        "\n",
+        "  tf.keras.mixed_precision.set_global_policy(policy=\"float32\")\n",
+        "  tf.keras.mixed_precision.global_policy()\n",
+        "\n",
+        "  model_parsing_3.compile(loss=tf.keras.losses.CategoricalCrossentropy(), optimizer=tf.keras.optimizers.Adam(INITIAL_LR), metrics=['accuracy'])\n",
+        "\n",
+        "  callbacks = [\n",
+        "      ModelCheckpoint(os.path.join(saved_models_path, WEIGHT_FILE_NAME), save_best_only=True, save_weights_only=True),\n",
+        "      ReduceLROnPlateau(monitor='val_loss', factor=LR_REDUCTION_FACTOR, patience=LR_REUCTION_PATIENCE, min_lr=MIN_LR),\n",
+        "      EarlyStopping(monitor='val_loss', patience=EARLY_STOPPING_PATIENCE),\n",
+        "  ]\n",
+        "\n",
+        "  model_parsing_3.fit(train_data_3, steps_per_epoch=len(train_data_3),\n",
+        "                      validation_data=valid_data_3, validation_steps=len(valid_data_3),\n",
+        "                      epochs=EPOCHS, verbose=VERBOSE, batch_size=BATCH_SIZE_PARSING, callbacks=callbacks)\n",
+        "  \n",
+        "  model_parsing_3.save(os.path.join(saved_models_path, MODEL_FILE_NAME))\n",
+        "\n",
+        "else:\n",
+        "\n",
+        "  # currently we are using saved model as model weight file\n",
+        "  model_parsing_3 = load_model(os.path.join(saved_models_path, WEIGHT_FILE_NAME))\n",
+        "\n",
+        "model_parsing_3.summary()\n",
+        "\n",
+        "# visualize a plot of model\n",
+        "# tf.keras.utils.plot_model(model_parsing_0, show_shapes=True,)"
+      ],
       "metadata": {
         "id": "__tXnmh526cg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculate_score_for_human_parsing_pred(pred_mask, true_mask, n_classes):\n",
+        "\n",
+        "  labels = [i for i in range(n_classes)]\n",
+        "\n",
+        "  true_mask = true_mask.flatten()\n",
+        "  pred_mask = pred_mask.flatten()\n",
+        "\n",
+        "  f1_score_pred = f1_score(true_mask, pred_mask, labels=labels, average=None, zero_division=0)\n",
+        "\n",
+        "  return {'f1_score': f1_score_pred}"
+      ],
+      "metadata": {
+        "id": "HSTrKJWR6PYE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pred_human_parsing(image_path, mask_path, model):\n",
+        "\n",
+        "  image, _, _, mask_stack = process_image_and_mask(image_path, mask_path)\n",
+        "\n",
+        "  # visualize_process_image_and_mask(image, mask_stack)\n",
+        "\n",
+        "  # make image ready for prediction, we are doing this because for prediciton our data must be inside an array\n",
+        "  image = np.expand_dims(image, axis=0)\n",
+        "\n",
+        "  # make mask ready for prediction, this will convery on-hot encoded mask back to grey scale image with values 0-19\n",
+        "  mask_onehot = np.argmax(mask_stack, axis=-1)\n",
+        "  mask_onehot = mask_onehot.astype(np.int32)\n",
+        "\n",
+        "  true_mask = mask_onehot\n",
+        "\n",
+        "  # make prediction and convert one-hot encoded result to image grey scale 0-19\n",
+        "  pred_mask = model.predict(image, verbose=0)[0]\n",
+        "  pred_mask = np.argmax(pred_mask, axis=-1)\n",
+        "  pred_mask = pred_mask.astype(np.float32)\n",
+        "\n",
+        "  return pred_mask, true_mask"
+      ],
+      "metadata": {
+        "id": "K7VbAVZh53li"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_and_predict_model(class_labels, model):\n",
+        "\n",
+        "  random_index = randrange(len(test_x)-1)\n",
+        "\n",
+        "  # image_path, mask_path = get_img_and_label_by_index(vton_test_dir, 16)\n",
+        "\n",
+        "  image_path = test_x[random_index]\n",
+        "  mask_path = test_y[random_index]\n",
+        "\n",
+        "  # predicting the results\n",
+        "  pred_mask, true_mask = pred_human_parsing(image_path, mask_path, model)\n",
+        "\n",
+        "\n",
+        "  # calculating prediction scores \n",
+        "  score = calculate_score_for_human_parsing_pred(pred_mask, true_mask, len(class_labels))\n",
+        "\n",
+        "  f1_score_pred = score['f1_score']\n",
+        "  # remove zeros\n",
+        "  f1_score_pred = f1_score_pred[f1_score_pred != 0]\n",
+        "  print('f1 = ', np.mean(f1_score_pred, axis=0))\n",
+        "\n",
+        "\n",
+        "  # ploting the results\n",
+        "  fig = plt.figure(figsize=(18, 12))\n",
+        "\n",
+        "  plt.rc('font', size=12) \n",
+        "\n",
+        "\n",
+        "  ax1  = fig.add_subplot(1, 3, 1,)\n",
+        "  visual_x = cv2.imread(image_path)\n",
+        "  ax1.imshow(visual_x)\n",
+        "  ax1.set_title('Input Image %s' % str(visual_x.shape))\n",
+        "\n",
+        "  plt.xticks([])\n",
+        "  plt.yticks([])\n",
+        "\n",
+        "\n",
+        "  ax2 = fig.add_subplot(1, 3, 2,)\n",
+        "  true_mask = cv2.imread(mask_path, cv2.IMREAD_GRAYSCALE)\n",
+        "  ax2.imshow(true_mask)\n",
+        "  ax2.set_title('True Mask %s' % str(true_mask.shape))\n",
+        "\n",
+        "  plt.xticks([])\n",
+        "  plt.yticks([])\n",
+        "\n",
+        "\n",
+        "  ax3 = fig.add_subplot(1, 3, 3,)\n",
+        "  ax3.imshow(pred_mask)\n",
+        "  ax3.set_title('Pred Grey-Scale Mask %s' % str(pred_mask.shape))\n",
+        "\n",
+        "  plt.xticks([])\n",
+        "  plt.yticks([])\n",
+        "\n",
+        "\n",
+        "plot_and_predict_model(merged_class_labels, model_parsing_3)"
+      ],
+      "metadata": {
+        "id": "CsF4pkW46Jfz"
       },
       "execution_count": null,
       "outputs": []
